--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<version>1.6.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20220320</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
