--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.main.allow-circular-references= true
+
+spring.data.mongodb.port=27018
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=tucarbure
+spring.data.mongodb.password=tucarbure
+spring.data.mongodb.database=tucarbure
