mise à jour docummentation swagger

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,10 +11,9 @@ services:
   prometheus:
     image: prom/prometheus:v2.36.2
     volumes:
-      - C:\Project\TuCarbures\tucarbures\docker\prometheus.yml:/etc/prometheus/prometheus.yml
+      - C:\Users\skalu\Desktop\Projet3-cda\TuCarbureAPI\docker\prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - 9090:9090
-
 
   grafana:
     image: grafana/grafana:latest
