--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   prometheus:
     image: prom/prometheus:v2.36.2
     volumes:
-      - C:\Users\skalu\Desktop\Projet3-cda\TuCarbureAPI\docker\prometheus.yml:/etc/prometheus/prometheus.yml
+      - C:\Project\TuCarbures\tucarbures\docker\prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - 9090:9090
 
