--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<groupId>com.tucarbure</groupId>
 	<artifactId>tucarbures</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
+	<packaging>jar</packaging>
 	<name>tucarbures</name>
 	<description>tucarbures</description>
 	<properties>
