--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -5,7 +5,7 @@ scrape_configs:
   - job_name: 'prometheus' # Job to scrape Prometheus metrics
     scrape_interval: 1s
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['192.168.1.27:9090']
 
   - job_name: 'spring-actuator'
     metrics_path: '/actuator/prometheus' # Job to scrape application metrics
